<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MultiButton</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="view">請輸入號碼</string>
    
    
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_clean">清除</string>

</resources>